Thymeleaf Looping or Iteration - th:each Attribute Status Variable

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -9,6 +9,12 @@
     <table border="1">
         <thead>
             <tr>
+                <th>Serial No</th>
+                <th>Index</th>
+                <th>Even</th>
+                <th>Odd</th>
+                <th>First</th>
+                <th>Last</th>
                 <th>Name</th>
                 <th>Email</th>
                 <th>Role</th>
@@ -16,7 +22,13 @@
             </tr>
         </thead>
         <tbody>
-            <tr th:each="user : ${users}">
+            <tr th:each="user, userStat : ${users}">
+                <td th:text="${userStat.count}"></td>
+                <td th:text="${userStat.index}"></td>
+                <td th:text="${userStat.even}"></td>
+                <td th:text="${userStat.odd}"></td>
+                <td th:text="${userStat.first}"></td>
+                <td th:text="${userStat.last}"></td>
                 <td th:text="${user.name}"></td>
                 <td th:text="${user.email}"></td>
                 <td th:text="${user.role}"></td>
