Add Footer to Thymeleaf Template HTML Page

--- a/src/main/resources/templates/admin/posts.html
+++ b/src/main/resources/templates/admin/posts.html
@@ -53,6 +53,17 @@
             </tbody>
         </table>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer-copyright text-center bg-dark py-3"
+        style="position: fixed; height: 80px; width: 100%;bottom: 0;">
+        <div>
+            <strong>
+                Copyright &copy; 2024 <a href="https://www.dgmf-java-spring-coding.net" target="_blank"
+                    rel="noopener noreferrer">DGMF Java Spring Coding</a> All Rights Reserved
+            </strong>
+        </div>
+    </footer>
 </body>
 
 </html>
