--- a/src/main/resources/templates/admin/posts.html
+++ b/src/main/resources/templates/admin/posts.html
@@ -1,33 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Spring Boot Thymeleaf Blog App</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+<!-- th:replace ==> Replaces the Current Tag with the Tag Defining 
+the Fragment ==> th:replace="templateName :: thymeleafSelector"-->
+<div th:replace="admin/header :: header"></div>
 
 <body>
     <!-- Bootstrap Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Spring Boot Thymeleaf Blog App</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/admin/posts}">Posts</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav> <!-- End - Bootstrap Navbar -->
+    <div th:replace="admin/navbar :: navbar"></div>
+    <!-- End - Bootstrap Navbar -->
 
     <div class="container">
         <div class="row">
@@ -55,15 +36,8 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer-copyright text-center bg-dark py-3"
-        style="position: fixed; height: 80px; width: 100%;bottom: 0;">
-        <div>
-            <strong>
-                Copyright &copy; 2024 <a href="https://www.dgmf-java-spring-coding.net" target="_blank"
-                    rel="noopener noreferrer">DGMF Java Spring Coding</a> All Rights Reserved
-            </strong>
-        </div>
-    </footer>
+    <div th:replace="admin/footer :: footer"></div>
+
 </body>
 
 </html>
