--- a/src/main/resources/templates/admin/navbar.html
+++ b/src/main/resources/templates/admin/navbar.html
@@ -14,6 +14,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" th:href="@{/admin/posts}">Posts</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/admin/posts/newpost}">New Post</a>
+                </li>
             </ul>
         </div>
     </div>
