Create Post Form Handling

--- a/src/main/resources/templates/admin/footer.html
+++ b/src/main/resources/templates/admin/footer.html
@@ -6,7 +6,7 @@
     <div>
         <strong>
             Copyright &copy; 2024 <a href="https://www.dgmf-java-spring-coding.net" target="_blank"
-                rel="noopener noreferrer">DGMF Java Spring Coding</a> All Rights Reserved
+                rel="noopener noreferrer">DGMF | Java | Spring | Spring Boot | Coding</a> All Rights Reserved
         </strong>
     </div>
 </footer>
