Addition of the "Delete" Button to the Form displaying the List of Blog Posts

--- a/src/main/resources/templates/admin/posts.html
+++ b/src/main/resources/templates/admin/posts.html
@@ -31,6 +31,7 @@ the Fragment ==> th:replace="templateName :: thymeleafSelector"-->
                     <td th:text="${post.createdOn}">Post Created On</td>
                     <td>
                         <a th:href="@{/admin/posts/{postId}/edit(postId=${post.id})}" class="btn btn-primary">Edit</a>
+                        <a th:href="@{/admin/posts/{postId}/delete(postId=${post.id})}" class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
             </tbody>
