Addition of the "View" Button to the Form displaying the List of Blog Posts

--- a/src/main/resources/templates/admin/posts.html
+++ b/src/main/resources/templates/admin/posts.html
@@ -32,6 +32,7 @@ the Fragment ==> th:replace="templateName :: thymeleafSelector"-->
                     <td>
                         <a th:href="@{/admin/posts/{postId}/edit(postId=${post.id})}" class="btn btn-primary">Edit</a>
                         <a th:href="@{/admin/posts/{postId}/delete(postId=${post.id})}" class="btn btn-danger">Delete</a>
+                        <a th:href="@{/admin/posts/{postUrl}/view(postUrl=${post.url})}" class="btn btn-info">View</a>
                     </td>
                 </tr>
             </tbody>
