--- a/src/main/resources/templates/admin/posts.html
+++ b/src/main/resources/templates/admin/posts.html
@@ -3,17 +3,35 @@
 
 <!-- th:replace ==> Replaces the Current Tag with the Tag Defining 
 the Fragment ==> th:replace="templateName :: thymeleafSelector"-->
-<div th:replace="admin/header :: header"></div>
+<!-- <div th:replace="admin/header :: header"></div> -->
+<div th:replace="~{admin/header :: header}"></div>
 
 <body>
     <!-- Bootstrap Navbar -->
-    <div th:replace="admin/navbar :: navbar"></div>
+    <!-- <div th:replace="admin/navbar :: navbar"></div> -->
+    <div th:replace="~{admin/navbar :: navbar}"></div>
     <!-- End - Bootstrap Navbar -->
 
     <div class="container">
         <div class="row">
             <h1>List Blog Post</h1>
         </div>
+        <!-- Search Bar -->
+        <div class="row">
+            <div class="col-md-5">
+                <div class="form-group">
+                    <form class="form-inline" th:action="@{/admin/posts/search}">
+                        <div class="input-group">
+                            <input type="text" class="form-control" name="query" />
+                            <span class="input-group-btn">
+                                <button class="btn btn-primary" type="submit"> Search</button>
+                            </span>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <br>
         <table class="table table-striped table-hover table-bordered">
             <thead class="table-dark">
                 <th style="width: 10%;">#</th>
@@ -31,7 +49,8 @@ the Fragment ==> th:replace="templateName :: thymeleafSelector"-->
                     <td th:text="${post.createdOn}">Post Created On</td>
                     <td>
                         <a th:href="@{/admin/posts/{postId}/edit(postId=${post.id})}" class="btn btn-primary">Edit</a>
-                        <a th:href="@{/admin/posts/{postId}/delete(postId=${post.id})}" class="btn btn-danger">Delete</a>
+                        <a th:href="@{/admin/posts/{postId}/delete(postId=${post.id})}"
+                            class="btn btn-danger">Delete</a>
                         <a th:href="@{/admin/posts/{postUrl}/view(postUrl=${post.url})}" class="btn btn-info">View</a>
                     </td>
                 </tr>
@@ -40,7 +59,8 @@ the Fragment ==> th:replace="templateName :: thymeleafSelector"-->
     </div>
 
     <!-- Footer -->
-    <div th:replace="admin/footer :: footer"></div>
+    <!-- <div th:replace="admin/footer :: footer"></div> -->
+    <div th:replace="~{admin/footer :: footer}"></div>
 
 </body>
 
