--- a/src/main/resources/templates/admin/footer.html
+++ b/src/main/resources/templates/admin/footer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<footer class="footer-copyright text-center bg-dark py-3" style="position: fixed; height: 80px; width: 100%;bottom: 0;"
+<footer class="footer-copyright text-center bg-dark py-3" style="position: fixed; height: 80px; width: 100%;bottom: 0; color: white;"
     th:fragment="footer">
     <div>
         <strong>
