--- a/src/main/resources/templates/admin/posts.html
+++ b/src/main/resources/templates/admin/posts.html
@@ -8,8 +8,8 @@ the Fragment ==> th:replace="templateName :: thymeleafSelector"-->
 
 <body>
     <!-- Bootstrap Navbar -->
-    <!-- <div th:replace="admin/navbar :: navbar"></div> -->
-    <div th:replace="~{admin/navbar :: navbar}"></div>
+    <!-- <div th:replace="admin/navbar_admin :: navbar_admin"></div> -->
+    <div th:replace="~{admin/navbar_admin :: navbar_admin}"></div>
     <!-- End - Bootstrap Navbar -->
 
     <div class="container">
