--- a/src/main/resources/templates/admin/edit_post.html
+++ b/src/main/resources/templates/admin/edit_post.html
@@ -7,7 +7,7 @@ the Fragment ==> th:replace="templateName :: thymeleafSelector"-->
 
 <body>
     <!-- Navbar -->
-    <div th:replace="admin/navbar :: navbar"></div>
+    <div th:replace="admin/navbar_admin :: navbar_admin"></div>
     <!-- End - Bootstrap Navbar -->
 
     <br>
