--- a/src/main/resources/templates/blog/navbar_blog.html
+++ b/src/main/resources/templates/blog/navbar_blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="navbar_admin"> 
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="navbar_blog"> 
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Spring Boot Thymeleaf Blog App</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -12,10 +12,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/admin/posts}">Posts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/admin/posts/newpost}">New Post</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/}">All Posts</a>
                 </li>
             </ul>
         </div>
